tests/custom/issues/405/stderr.expected
Error:
    405.essence:2:15:
unexpected i
expecting comma, end of input, operator, rest of statement, or statement
    such that for i in s . i % 2 = 0
                  ^
